@@ -986,7 +986,7 @@ func TestFsEvV1AuthorizeArgs(t *testing.T) {
 		SuppliersIgnoreErrors: true,
 		SuppliersMaxCost:      utils.MetaEventCost,
 	}
-	expected.Event[utils.Usage] = config.CgrConfig().SessionSCfg().MaxCallDuration
+	expected.Event[utils.Usage] = config.CgrConfig().SessionSCfg().GetDefaultUsage(utils.VOICE)
 	rcv := ev.V1AuthorizeArgs()
 	if !reflect.DeepEqual(expected.CGREvent.Tenant, rcv.CGREvent.Tenant) {
 		t.Errorf("Expecting: %+v, received: %+v", expected.CGREvent.Tenant, rcv.CGREvent.Tenant)
